fixed alignment, tab margins

--- a/public/stylesheets/dosing.less
+++ b/public/stylesheets/dosing.less
@@ -2,6 +2,9 @@
   background: #e6e6e6;
   margin: 10px;
   
+  // reset bootstrap tab formatting
+  ul { margin-bottom: 0; }
+  
   div.drug {
     padding: 20px;
     color: #5a5a5a;
