--- a/public/stylesheets/sidebar.less
+++ b/public/stylesheets/sidebar.less
@@ -48,9 +48,15 @@
 
   div.recent-medication {
     h1 { background-image: url(/images/med.png) }
-    table td:first-child {
-      div:nth-child(1) { .bolded; }
-      div:nth-child(2) { font-style: italic; }
+    table {
+      td:first-child {
+        div:nth-child(1) { .bolded; }
+        div:nth-child(2) { font-style: italic; }
+      }
+      td:last-child {
+        text-align: right;
+        vertical-align: top;
+      }
     }
   } 
 
